Bug 1522422 - Fixing opacity issue on SVG USE elements in D2D. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D44059